# ros2_tg

./: .gitignore
docker/ros1_docker/: Dockerfile  docker-compose.yml
docker/ros1_workspace/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
docker/ros1_workspace/devel/: .catkin
docker/ros1_workspace/devel/.private/manipulator_unal_description/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
docker/ros1_workspace/devel/.private/mob_manipulator_controller/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
docker/ros1_workspace/devel/.private/mobile_manipulator_msgs/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
docker/ros1_workspace/devel/.private/mobile_manipulator_unal_description/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
docker/ros1_workspace/devel/.private/mobile_robot_unal_description/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
docker/ros1_workspace/devel/.private/mobile_robot_vel_publisher/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
docker/ros1_workspace/devel/.private/test_trajectories_osc/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
docker/ros1_workspace/devel/include/mobile_manipulator_msgs/: JointData.h  Joints.h  MobileManipulator.h  OrientationData.h  PositionData.h  RPY.h  SingularValues.h  Torques.h  Trajectory.h  Vector3.h
docker/ros1_workspace/devel/lib/mob_manipulator_controller/: mob_manipulator_controller
docker/ros1_workspace/devel/lib/mobile_robot_unal_description/: odometry_node
docker/ros1_workspace/logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
docker/ros1_workspace/logs/manipulator_unal_description/: build.cmake.000.log.stderr
docker/ros1_workspace/logs/mob_manipulator_controller/: build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.000.log.stderr  build.symlink.001.log.stderr
docker/ros1_workspace/logs/mobile_manipulator_msgs/: build.cmake.000.log.stderr  build.symlink.000.log.stderr
docker/ros1_workspace/logs/mobile_robot_unal_description/: build.cmake.000.log.stderr  build.symlink.001.log.stderr
docker/ros1_workspace/logs/mobile_robot_vel_publisher/: build.cmake.002.log.stderr  build.symlink.001.log.stderr
docker/ros1_workspace/logs/test_trajectories_osc/: build.symlink.001.log.stderr
scripts/: prueba_web.py
src/coppeliasim_ros2_control/: CMakeLists.txt  package.xml
src/coppeliasim_ros2_control/include/coppeliasim_ros2_control/: coppeliasim_client.hpp  coppeliasim_hardware.hpp
src/coppeliasim_ros2_control/scripts/: coppeliasim_bridge.py  coppeliasim_bridge_alto.py
src/mob_manipulator_controller/: CMakeLists.txt  package.xml
src/mob_manipulator_controller/config/: config.yaml
src/mob_manipulator_controller/include/mob_manipulator_controller/: Mob_Manipulator_Controller.hpp
src/mob_manipulator_controller/include/osc_controller/: OSC_Controller.hpp
src/mob_manipulator_controller/launch/: osc_controller.launch.py
src/mob_manipulator_controller/src/: Load_model.cpp  Mob_Manipulator_Controller.cpp  Stack_Tasks.cpp  mob_manipulator_controller_node.cpp
src/mob_manipulator_controller/src/osc_controller/: OSC_Controller.cpp
src/mobile_manipulator_description/: CMakeLists.txt  package.xml
src/mobile_manipulator_description/urdf/: mobile_manipulator.urdf
src/mobile_manipulator_msgs/: CMakeLists.txt  package.xml
src/mobile_manipulator_msgs/msg/: JointData.msg  MobileManipulator.msg  OrientationData.msg  PositionData.msg  Trajectory.msg
(+164 files in other folders)
